--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.caoxile</groupId>
-    <artifactId>springboot-ssm</artifactId>
+    <artifactId>spring-boot-ssm</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
