1 调整代码生成工具 2 添加权限管理的登录和用户管理

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,8 +38,8 @@ spring.datasource.druid.connectionProperties=druid.stat.mergeSql=true;druid.stat
 ###################################### /Druid config ##############################################
 
 ###################################### Mybatis config ##############################################
-mybatis.type-aliases-package=com.company.project.model
-mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+mybatis.type-aliases-package=com.company.project.*.model
+mybatis.mapper-locations=classpath:mapper/**/*Mapper.xml
 ###################################### /Mybatis config #############################################
 
 ###################################### 通用 Mapper config ###########################################
