--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
 # 开发环境配置
-spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf-8&useSSL=false
-spring.datasource.username=name
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://localhost:3306/project?characterEncoding=utf-8&useSSL=false
+spring.datasource.username=tom
+spring.datasource.password=hellotom
