--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,20 @@
             <version>1.3.5</version>
             <scope>test</scope>
         </dependency>
+
+        <!--Apache Shiro-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+
+        <!-- shiro-redis -->
+        <dependency>
+            <groupId>org.crazycake</groupId>
+            <artifactId>shiro-redis</artifactId>
+            <version>3.2.3</version>
+        </dependency>
     </dependencies>
 
     <!--Spring Boot打包插件-->
