修改自动代码生成工具

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,7 +43,7 @@ mybatis.mapper-locations=classpath:mapper/**/*Mapper.xml
 ###################################### /Mybatis config #############################################
 
 ###################################### 通用 Mapper config ###########################################
-mapper.mappers=com.company.project.core.Mapper
+mapper.mappers=com.company.project.common.core.Mapper
 mapper.not-empty=false
 mapper.identity=MYSQL
 ###################################### /通用 Mapper config ##########################################
