--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.profiles.active=dev
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 
+# json转换日期用的时区
+spring.jackson.time-zone=GMT+8
+
 ###################################### Druid config ##############################################
 #初始化连接池大小
 spring.datasource.druid.initialSize=5
