--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,39 +4,40 @@ spring.profiles.active=dev
 # 404 交给异常处理器处理
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
-
-###################################### Druid config ##############################################
+###################################### Druid Pool config ##############################################
 #初始化连接池大小
 spring.datasource.druid.initialSize=5
 #最小的连接池数量
 spring.datasource.druid.minIdle=2
 #最大的连接池数量
-spring.datasource.druid.maxActive=20
+spring.datasource.druid.maxActive=30
 #获取连接时最大等待时间，单位毫秒
 spring.datasource.druid.maxWait=60000
-# 1) Destroy线程会检测连接的间隔时间，如果连接空闲时间大于等于minEvictableIdleTimeMillis则关闭物理连接。
-# 2) testWhileIdle的判断依据，详细看testWhileIdle属性的说明
-spring.datasource.druid.timeBetweenEvictionRunsMillis=60000
-#连接保持空闲而不被驱逐的最小时间
-spring.datasource.druid.minEvictableIdleTimeMillis=300000
-#用来检测连接是否有效的sql，要求是一个查询语句
-spring.datasource.druid.validationQuery=SELECT 1 FROM DUAL
-#申请连接的时候检测，如果空闲时间大于timeBetweenEvictionRunsMillis，执行validationQuery检测连接是否有效
-spring.datasource.druid.testWhileIdle=true
-#申请连接时执行validationQuery检测连接是否有效，做了这个配置会降低性能。
-spring.datasource.druid.testOnBorrow=false
-#归还连接时执行validationQuery检测连接是否有效，做了这个配置会降低性能。
-spring.datasource.druid.testOnReturn=false
-#是否缓存preparedStatement，也就是PSCache
-spring.datasource.druid.poolPreparedStatements=false
-#每个链接缓存PSCache数量(启用PSCache时,必须大于0)
-spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=-1
+###################################### /Druid Pool config ##############################################
+
+###################################### Druid Monitor config ##############################################
 #配置扩展插件，常用的插件有： 监控统计用的filter:stat, 日志用的filter:log4j, 防御sql注入的filter:wall
 spring.datasource.druid.filters=stat,wall
-#其他一些属性配置,如mergeSql(合并sql),slowSqlMillis(慢sql时间)等
-spring.datasource.druid.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=2000
-###################################### /Druid config ##############################################
-
+# WebStatFilter配置
+spring.datasource.druid.web-stat-filter.enabled=true
+spring.datasource.druid.web-stat-filter.url-pattern=/*
+spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*
+# Stat内置监控页面配置
+spring.datasource.druid.stat-view-servlet.enabled=true
+spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
+spring.datasource.druid.stat-view-servlet.reset-enable=true
+spring.datasource.druid.stat-view-servlet.login-username=root
+spring.datasource.druid.stat-view-servlet.login-password=admin2020!
+#spring.datasource.druid.stat-view-servlet.allow=127.0.0.1
+#spring.datasource.druid.stat-view-servlet.deny=
+# Spring监控配置
+spring.datasource.druid.aop-patterns=com.company.project.*.service.*,com.company.project.*.service.impl.*
+###################################### /Druid Monitor config ##############################################
+###################################### Druid Abandoned config ##############################################
+#spring.datasource.druid.remove-abandoned=true
+#spring.datasource.druid.remove-abandoned-timeout=300
+#spring.datasource.druid.log-abandoned=true
+###################################### /Druid Abandoned config ##############################################
 ###################################### Mybatis config ##############################################
 mybatis.type-aliases-package=com.company.project.*.model
 mybatis.mapper-locations=classpath:mapper/**/*Mapper.xml
